[project]
name = "rejax"
version = "0.1.1"
description = "Vectorizable RL algorithms in pure JAX"
authors = [
    {name = "Jarek Liesen", email = ""},
]
dependencies = [
    "pyyaml>=6.0.2",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "brax>=0.11.0",
    "evosax>=0.1.6",
    "distrax>=0.1.5",
    "gymnax>=0.0.8",
    "jax>=0.4.34",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
compat = [
    "brax>=0.11.0",
    "craftax>=1.4.3",
    "navix>=0.7.0",
    "jumanji>=1.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
