[project]
name = "rejax"
version = "0.1.2"
description = "Vectorizable RL algorithms in pure JAX"
authors = [
    {name = "Jarek Liesen", email = ""},
]
dependencies = [
    "pyyaml>=6.0.2",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "distrax>=0.1.5",
    "gymnax @ git+https://github.com/RobertTLange/gymnax@main",
    "jax>=0.4.34",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = [
    "machine-learning",
    "reinforcement-learning",
    "jax",
    "vectorization",
    "hardware-acceleration",
]

[project.urls]
Homepage = "https://github.com/keraJLi/rejax"
Repository = "https://github.com/keraJLi/rejax"
Documentation = "https://github.com/keraJLi/rejax#readme"
Issues = "https://github.com/keraJLi/rejax/issues"
Changelog = "https://github.com/keraJLi/rejax/releases"

[project.optional-dependencies]
# Compatibility wrappers for various RL environments
compat = [
    "brax>=0.11.0",
    "craftax>=1.4.3",
    "navix>=0.7.0",
    "jumanji>=1.0.1",
    "gymnasium>=1.0.0",
    "kinetix-env>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
